# soccer-predictor

./: README.md  pyproject.toml  soccer-predictor.ipynb
