[project]
name = "soccer-prediction-app"
version = "0.1.0"
description = "Data Science 3000 Application"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.8.0",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.10.0",
    "xgboost>=3.1.3",
    "pydotplus>=2.0.2",
    "plotly>=5.15.0",
    "pydantic>=2.6",
    "python-dotenv",
    "openai>=1.95.1",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.30.0",
]